--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "aws-serverless-express": "3.3.5",
     "body-parser": "1.17.1",
     "dotenv": "16.0.3",
-    "express": "4.15.2"
+    "express": "4.15.2",
+    "loglevel": "^1.8.1"
   },
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "@aws-sdk/client-dynamodb": "3.294.0",
     "@aws-sdk/client-ssm": "3.294.0",
     "@aws-sdk/lib-dynamodb": "3.294.0",
