--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -9,9 +9,11 @@
     "body-parser": "1.17.1",
     "dotenv": "16.0.3",
     "express": "4.15.2",
-    "loglevel": "^1.8.1"
+    "loglevel": "1.8.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-api-gateway": "3.294.0",
     "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "@aws-sdk/client-dynamodb": "3.294.0",
     "@aws-sdk/client-ssm": "3.294.0",
