--- a/amplify/backend/function/myapplicationsecretadynamodb/lib/nodejs/package.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/lib/nodejs/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-api-gateway": "3.294.0",
+    "@aws-sdk/client-appsync": "3.294.0",
     "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "@aws-sdk/client-dynamodb": "3.294.0",
+    "@aws-sdk/client-ssm": "3.294.0",
     "@aws-sdk/lib-dynamodb": "3.294.0",
     "@aws-sdk/util-dynamodb": "3.294.0"
   }
