--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -20,6 +20,8 @@
     "@aws-sdk/client-ssm": "3.294.0",
     "@aws-sdk/lib-dynamodb": "3.294.0",
     "@aws-sdk/util-dynamodb": "3.294.0",
-    "@types/aws-lambda": "8.10.92"
+    "@nlpjs/basic": "^4.26.1",
+    "@types/aws-lambda": "8.10.92",
+    "node-nlp": "^4.26.1"
   }
 }
