--- a/amplify/backend/function/myapplicationsecretanlp/lib/nodejs/package.json
+++ b/amplify/backend/function/myapplicationsecretanlp/lib/nodejs/package.json
@@ -3,8 +3,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@nlpjs/basic": "^4.26.1",
-    "node-nlp": "^4.26.1"
+    "@nlpjs/basic": "4.26.1",
+    "node-nlp": "4.26.1"
   },
   "devDependencies": {}
 }
