update user from chrom ext

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -91,11 +91,18 @@
       "build": true,
       "dependsOn": [
         {
+          "category": "function",
+          "resourceName": "myapplicationsecretadynamodb",
           "attributes": [
             "Arn"
-          ],
+          ]
+        },
+        {
           "category": "function",
-          "resourceName": "myapplicationsecretadynamodb"
+          "resourceName": "myapplicationsecretanlp",
+          "attributes": [
+            "Arn"
+          ]
         },
         {
           "attributes": [
