--- a/amplify/backend/function/UserServiceLambda/src/package.json
+++ b/amplify/backend/function/UserServiceLambda/src/package.json
@@ -18,6 +18,7 @@
     "@aws-sdk/client-appsync": "3.294.0",
     "@aws-sdk/client-cognito-identity-provider": "3.294.0",
     "@aws-sdk/client-dynamodb": "3.294.0",
+    "@aws-sdk/client-s3": "3.294.0",
     "@aws-sdk/client-ssm": "3.294.0",
     "@aws-sdk/lib-dynamodb": "3.294.0",
     "@aws-sdk/util-dynamodb": "3.294.0",
