--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -248,6 +248,11 @@
       "serviceType": "imported",
       "providerPlugin": "awscloudformation",
       "dependsOn": []
+    },
+    "nlpModelStorage": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
     }
   }
 }
