--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -91,6 +91,38 @@
       "build": true,
       "dependsOn": [
         {
+          "category": "api",
+          "resourceName": "myapplicationsecretaryamplify",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput",
+            "GraphQLAPIKeyOutput"
+          ]
+        },
+        {
+          "category": "auth",
+          "resourceName": "myapplicationsecretaryamplify",
+          "attributes": [
+            "UserPoolId"
+          ]
+        },
+        {
+          "category": "storage",
+          "resourceName": "Userfhcpuwhhyffndfm7dvqoi7745adev",
+          "attributes": [
+            "Name",
+            "Arn",
+            "StreamArn"
+          ]
+        },
+        {
+          "category": "storage",
+          "resourceName": "nlpModelStorage",
+          "attributes": [
+            "BucketName"
+          ]
+        },
+        {
           "category": "function",
           "resourceName": "myapplicationsecretadynamodb",
           "attributes": [
@@ -103,31 +135,6 @@
           "attributes": [
             "Arn"
           ]
-        },
-        {
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput",
-            "GraphQLAPIKeyOutput"
-          ],
-          "category": "api",
-          "resourceName": "myapplicationsecretaryamplify"
-        },
-        {
-          "attributes": [
-            "UserPoolId"
-          ],
-          "category": "auth",
-          "resourceName": "myapplicationsecretaryamplify"
-        },
-        {
-          "attributes": [
-            "Name",
-            "Arn",
-            "StreamArn"
-          ],
-          "category": "storage",
-          "resourceName": "Userfhcpuwhhyffndfm7dvqoi7745adev"
         }
       ],
       "providerPlugin": "awscloudformation",
