--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "1.3.4",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "loglevel": "^1.8.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
