--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@types/animejs": "^3.1.7",
     "@types/jest": "27.0.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -20,6 +21,7 @@
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
+    "animejs": "^3.2.1",
     "aws-amplify": "5.0.8",
     "axios": "1.3.4",
     "eslint": "8.34.0",
