--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animejs": "^3.2.1",
     "aws-amplify": "5.0.8",
     "axios": "1.3.4",
+    "clsx": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "loglevel": "^1.8.1",
