--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "4.3.3",
+    "@aws-sdk/client-appsync": "3.316.0",
+    "@aws-sdk/client-ssm": "3.316.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
@@ -12,7 +14,7 @@
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
-    "@types/animejs": "^3.1.7",
+    "@types/animejs": "3.1.7",
     "@types/jest": "27.0.1",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
@@ -21,19 +23,20 @@
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
-    "animejs": "^3.2.1",
+    "animejs": "3.2.1",
     "aws-amplify": "5.0.8",
     "axios": "1.3.4",
-    "clsx": "^1.2.1",
+    "clsx": "1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "loglevel": "^1.8.1",
+    "loglevel": "1.8.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
     "socket.io": "4.6.1",
     "socket.io-client": "4.6.1",
+    "stripe": "12.2.0",
     "styled-components": "5.3.6",
     "typescript": "4.9.5",
     "web-vitals": "2.1.0"
