--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@mui/icons-material": "5.11.0",
     "@mui/material": "5.11.2",
     "@next/font": "13.1.6",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
