--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "Lambda layer resource stack creation using Amplify CLI",
+  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"10.5.2\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersione333db70": {
+    "LambdaLayerVersion291e69b4": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretanlp-LambdaLayerVersione333db70-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-04-21T04:10:06.538Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanlp-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPublice333db70": {
+    "LambdaLayerPermissionPublic291e69b4": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanlp-dev:33",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersion291e69b4"
+        },
         "Principal": "*"
       }
     }
@@ -59,7 +65,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersione333db70"
+        "Ref": "LambdaLayerVersion291e69b4"
       }
     }
   }
