--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionb3eeb077": {
+    "LambdaLayerVersiond93946e6": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretanlp-LambdaLayerVersionb3eeb077-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-05-04T20:56:06.239Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanlp-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPublicb3eeb077": {
+    "LambdaLayerPermissionPublicd93946e6": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanlp-dev:35",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersiond93946e6"
+        },
         "Principal": "*"
       }
     }
@@ -59,7 +65,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionb3eeb077"
+        "Ref": "LambdaLayerVersiond93946e6"
       }
     }
   }
