Revert "Frontend backup"

--- a/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
@@ -20,9 +20,6 @@
     }
   },
   "Resources": {
-<<<<<<< HEAD
-    "LambdaLayerVersion9d3f7768": {
-=======
     "LambdaLayerVersion11ec1692": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
@@ -141,29 +138,18 @@
       }
     },
     "LambdaLayerVersion741a8358": {
->>>>>>> f33040313b887fb4ed9b0b6cef72de7cb780b572
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-<<<<<<< HEAD
-          "S3Key": {
-            "Ref": "s3Key"
-          }
-        },
-        "Description": {
-          "Ref": "description"
-        },
-=======
           "S3Key": "amplify-builds/myapplicationsecretadynamodb-LambdaLayerVersion741a8358-build.zip"
         },
         "Description": "Updated layer version 2023-03-18T05:40:50.616Z",
->>>>>>> f33040313b887fb4ed9b0b6cef72de7cb780b572
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretadynamodb-${env}",
@@ -178,21 +164,11 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-<<<<<<< HEAD
-    "LambdaLayerPermissionPrivate9d3f7768": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion9d3f7768"
-        },
-=======
     "LambdaLayerPermissionPrivate741a8358": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
         "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-dev:46",
->>>>>>> f33040313b887fb4ed9b0b6cef72de7cb780b572
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -202,11 +178,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-<<<<<<< HEAD
-        "Ref": "LambdaLayerVersion9d3f7768"
-=======
         "Ref": "LambdaLayerVersion11ec1692"
->>>>>>> f33040313b887fb4ed9b0b6cef72de7cb780b572
       }
     }
   }
