--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -27,7 +27,9 @@
     "**/*.ts",
     "**/*.tsx",
     "next.config.js",
-    "src/ui-components/*"
+    "src/ui-components/*",
+    "src/*",
+    "amplify"
   ],
   "exclude": ["node_modules"]
 }
