fixed frontend issues

--- a/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretadynamodb/myapplicationsecretadynamodb-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion9687832e": {
+    "LambdaLayerVersion25c7fb6e": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretadynamodb-LambdaLayerVersion25c7fb6e-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-07-14T04:30:51.373Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretadynamodb-${env}",
@@ -51,13 +47,21 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate9687832e": {
+    "LambdaLayerPermissionPrivate25c7fb6e": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion9687832e"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-prod:14",
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
+    "LambdaLayerPermissionPrivateLegacy9": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretadynamodb-prod:9",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +71,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion9687832e"
+        "Ref": "LambdaLayerVersion25c7fb6e"
       }
     }
   }
