--- a/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanlp/myapplicationsecretanlp-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion84f951f8": {
+    "LambdaLayerVersion9fcec1a1": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretanlp-LambdaLayerVersion9fcec1a1-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-07-14T04:30:51.373Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanlp-${env}",
@@ -51,13 +47,19 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPublic84f951f8": {
+    "LambdaLayerPermissionPublic9fcec1a1": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion84f951f8"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanlp-prod:14",
+        "Principal": "*"
+      }
+    },
+    "LambdaLayerPermissionPublicLegacy9": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanlp-prod:9",
         "Principal": "*"
       }
     }
@@ -65,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion84f951f8"
+        "Ref": "LambdaLayerVersion9fcec1a1"
       }
     }
   }
