--- a/package.json
+++ b/package.json
@@ -9,27 +9,20 @@
     "@mui/icons-material": "5.11.0",
     "@mui/material": "5.11.2",
     "@next/font": "13.1.6",
+    "@stripe/react-stripe-js": "2.1.1",
+    "@stripe/stripe-js": "1.54.1",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "aws-amplify": "5.0.8",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "loglevel": "1.8.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
-    "styled-components": "5.3.6",
     "typescript": "4.9.5",
-    "web-vitals": "2.1.0",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "13.0.0",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.1",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/react-router-dom": "5.3.3",
-    "@types/styled-components": "5.1.26",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1"
+    "web-vitals": "2.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.14.1",
