--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
     "@next/font": "13.1.6",
     "@stripe/react-stripe-js": "2.1.1",
     "@stripe/stripe-js": "1.54.1",
-    "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1",
     "aws-amplify": "5.0.8",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
     "loglevel": "1.8.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
+    "socketio": "^1.0.0",
     "typescript": "4.9.5",
     "web-vitals": "2.1.0"
   },
@@ -33,9 +30,12 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
+    "@types/socket.io": "^3.0.2",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.1",
-    "@typescript-eslint/parser": "5.48.1"
+    "@typescript-eslint/parser": "5.48.1",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6"
   },
   "scripts": {
     "dev": "next dev",
