--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "4.3.3",
+    "@aws-sdk/client-ssm": "^3.370.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
@@ -18,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
     "socketio": "^1.0.0",
+    "stripe": "^12.13.0",
     "typescript": "4.9.5",
     "web-vitals": "2.1.0"
   },
