--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@next/font": "13.1.6",
     "@stripe/react-stripe-js": "2.1.1",
     "@stripe/stripe-js": "1.54.1",
+    "@tanstack/react-query": "^4.32.0",
     "aws-amplify": "5.0.8",
     "loglevel": "1.8.1",
     "next": "13.1.6",
+    "node-cache": "^5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
