--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "1.54.1",
     "@tanstack/react-query": "^4.32.0",
     "aws-amplify": "5.0.8",
+    "lodash": "^4.17.21",
     "loglevel": "1.8.1",
     "next": "13.1.6",
     "node-cache": "^5.1.2",
@@ -30,6 +31,7 @@
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
     "@types/jest": "27.0.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
