--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "4.3.3",
-    "@aws-sdk/client-ssm": "^3.370.0",
+    "@aws-sdk/client-ssm": "3.370.0",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@mui/icons-material": "5.11.0",
@@ -12,17 +12,18 @@
     "@next/font": "13.1.6",
     "@stripe/react-stripe-js": "2.1.1",
     "@stripe/stripe-js": "1.54.1",
-    "@tanstack/react-query": "^4.32.0",
+    "@tanstack/react-query": "4.32.0",
     "aws-amplify": "5.0.8",
-    "lodash": "^4.17.21",
+    "axios": "1.4.0",
+    "lodash": "4.17.21",
     "loglevel": "1.8.1",
     "next": "13.1.6",
-    "node-cache": "^5.1.2",
+    "node-cache": "5.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
-    "socketio": "^1.0.0",
-    "stripe": "^12.13.0",
+    "socketio": "1.0.0",
+    "stripe": "12.13.0",
     "typescript": "4.9.5",
     "web-vitals": "2.1.0"
   },
@@ -31,12 +32,12 @@
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
     "@types/jest": "27.0.1",
-    "@types/lodash": "^4.14.195",
+    "@types/lodash": "4.14.195",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/react-router-dom": "5.3.3",
-    "@types/socket.io": "^3.0.2",
+    "@types/socket.io": "3.0.2",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
